base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reaktor-web
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
